lab1/Test/L1-A-5-53.cmm
int CpGL [ 626943719 ] 
;
struct s JhjZ3C7n2hvqKyP ( float QIrBOG57jdE &[ 1252704358 
  ] ) {
  struct KiJ23LfoYZtjuDk vt7dSpKCqu3 [ 1041916438 
    ] ;
  if ( ! eJVaXB46QnzOoqYd + ! W1m_9JmGXk_f * hjjBuTqT3mo 
    / GsWSzo_kwyHq8uvGFT + - q4MYeIlAiBOHrhlKZy / OOkiqyqqgFi 
    + ( BqoB2G ) + ! XVp2PSDQX / o7 * JDNahIWA99lM421MupCn 
    * jSpUEA23t3rzrYnBH * EW4CxyXiP7VvBo - ! hjA5dyf / 
    EGDCoU5 * / Ner / _mwk * F3Cx0XUrEze2LxO - ! eotWmKxCBlLCgtGAE 
    / CVeukKXuXWRH7vzC <= bsxTJGyaqMs ( ) * pX / olQBXpuQp2jgNgzCFDj 
    && ! _KE2V9t1BfSTJsJnrh * DEvJK2uykO / RR / hutmTsDTN2kGBjEZ2t 
    && ! _K8ayW_PSMoDSCF / dbOXuUYKyB8ra * BZt7XLWi * 
    W4MwjELmH - AwQs8_NSvfb - ucfJOsSGk + FPkxTIFw6MPoo85 
    >= u >= dpk1 == yittPuUd6vY < cgKWqZ5gy < M9_d1qQ 
    )   return _daO4I ;
else   if lpj0 )   ThX4DOsTk8N ;$


  if ( ! FnQxgWEXf0IzK4 = lCfoXhHw1As )   NHQyFV2gjTwxYw 
    ;

  if ( ! YLX5 = sgafHMz0ppgcxK24f5M )   B ;
else   zVoXLx 

  while ( GU_qEYhBOtvO2sXjF2IG )   LrpiBckjXgd7O2jk 
    ;$

  {
  }`
}
